--- a/liquidwar6/src/lib/bot/Makefile.am
+++ b/liquidwar6/src/lib/bot/Makefile.am
@@ -24,18 +24,18 @@ AM_LDFLAGS = @LW6_LDFLAGS@
 if ALLINONE
 LW6DYN_LIB = 
 LW6BOT_LIB_S = mod-brute/libmod_brute_s.la mod-follow/libmod_follow_s.la mod-idiot/libmod_idiot_s.la mod-random/libmod_random_s.la
-else
+else #ALLINONE
 LW6DYN_LIB = ../dyn/libdyn.la 
 LW6BOT_LIB_S =
-endif
+endif #ALLINONE
 
 noinst_LTLIBRARIES = libbot.la
 libbot_la_LIBADD = $(LW6BOT_LIB_S)
 if LW6_CUNIT
 TEST_SRC_FILE = bot-test.c
-else
+else # LW6_CUNIT
 TEST_SRC_FILE =
-endif
+endif # LW6_CUNIT
 libbot_la_SOURCES = bot-api.c bot-register.c $(TEST_SRC_FILE)
 libbotdir= $(includedir)/@PACKAGE_TARNAME@/bot
 libbot_HEADERS = bot.h
@@ -46,8 +46,8 @@ libexec_PROGRAMS = liquidwar6bot-test
 liquidwar6bot_test_SOURCES = bot-testmain.c
 liquidwar6bot_test_LDADD = libbot.la $(LW6DYN_LIB) ../pil/libpil.la ../ker/libker.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6bot-test
-endif
-endif
+endif # !FULLSTATIC
+endif # LW6_CUNIT
 
 SUBDIRS = mod-brute mod-follow mod-idiot mod-random
 
