--- a/liquidwar6/src/lib/img/Makefile.am
+++ b/liquidwar6/src/lib/img/Makefile.am
@@ -24,9 +24,9 @@ AM_LDFLAGS = @LW6_LDFLAGS@ -ljpeg
 noinst_LTLIBRARIES = libimg.la
 if LW6_CUNIT
 TEST_SRC_FILE = img-test.c
-else
+else # LW6_CUNIT
 TEST_SRC_FILE =
-endif
+endif # LW6_CUNIT
 libimg_la_SOURCES = img-repr.c img-screenshot.c $(TEST_SRC_FILE)
 libimgdir= $(includedir)/@PACKAGE_TARNAME@/img
 libimg_HEADERS = img.h
@@ -37,8 +37,8 @@ libexec_PROGRAMS = liquidwar6img-test
 liquidwar6img_test_SOURCES = img-testmain.c
 liquidwar6img_test_LDADD = libimg.la ../cfg/libcfg.la ../hlp/libhlp.la ../ker/libker.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6img-test
-endif
-endif
+endif # !FULLSTATIC
+endif # LW6_CUNIT
 
 clean-local:
 	rm -f *.log *.trs
