--- a/liquidwar6/src/lib/vox/Makefile.am
+++ b/liquidwar6/src/lib/vox/Makefile.am
@@ -24,9 +24,9 @@ AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libvox.la
 if LW6_CUNIT
 TEST_SRC_FILE = vox-test.c
-else
+else # LW6_CUNIT
 TEST_SRC_FILE =
-endif
+endif # LW6_CUNIT
 libvox_la_SOURCES = vox-renderer.c $(TEST_SRC_FILE)
 libvoxdir= $(includedir)/@PACKAGE_TARNAME@/vox
 libvox_HEADERS = vox.h
@@ -37,8 +37,8 @@ libexec_PROGRAMS = liquidwar6vox-test
 liquidwar6vox_test_SOURCES = vox-testmain.c
 liquidwar6vox_test_LDADD = libvox.la ../mat/libmat.la ../gui/libgui.la ../ker/libker.la ../map/libmap.la ../cfg/libcfg.la ../hlp/libhlp.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6vox-test
-endif
-endif
+endif # !FULLSTATIC
+endif # LW6_CUNIT
 
 EXTRA_DIST = vox-internal.h
 
