--- a/liquidwar6/src/lib/ker/Makefile.am
+++ b/liquidwar6/src/lib/ker/Makefile.am
@@ -24,9 +24,9 @@ AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libker.la
 if LW6_CUNIT
 TEST_SRC_FILE = ker-test.c
-else
+else # LW6_CUNIT
 TEST_SRC_FILE =
-endif
+endif # LW6_CUNIT
 libker_la_SOURCES = ker-armies.c ker-capture.c ker-checksumlog.c ker-cursor.c ker-cursorarray.c ker-fighter.c ker-gamestate.c ker-gamestruct.c ker-hexa.c ker-history.c ker-mapstate.c ker-mapstruct.c ker-move.c ker-node.c ker-nodearray.c ker-placestruct.c ker-score.c ker-scorearray.c ker-slotstate.c ker-slotstruct.c ker-spread.c ker-tables.c ker-team.c ker-teammask.c $(TEST_SRC_FILE) ker-trigo.c ker-weapon.c ker-zonestate.c ker-zonestruct.c
 libkerdir= $(includedir)/@PACKAGE_TARNAME@/ker
 libker_HEADERS = ker.h 
@@ -37,8 +37,8 @@ libexec_PROGRAMS = liquidwar6ker-test
 liquidwar6ker_test_SOURCES = ker-testmain.c
 liquidwar6ker_test_LDADD = libker.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6ker-test
-endif
-endif
+endif # !FULLSTATIC
+endif # LW6_CUNIT
 
 EXTRA_DIST = ker-internal.h ker-trigo.h trigo.py
 
