--- a/liquidwar6/src/lib/mat/Makefile.am
+++ b/liquidwar6/src/lib/mat/Makefile.am
@@ -24,9 +24,9 @@ AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libmat.la
 if LW6_CUNIT
 TEST_SRC_FILE = mat-test.c
-else
+else # LW6_CUNIT
 TEST_SRC_FILE =
-endif
+endif # LW6_CUNIT
 libmat_la_SOURCES = mat-fmat2.c mat-fmat3.c mat-fmat4.c mat-fvec2.c mat-fvec3.c mat-fvec4.c mat-imat2.c mat-imat3.c mat-imat4.c mat-ivec2.c mat-ivec3.c mat-ivec4.c mat-dmat2.c mat-dmat3.c mat-dmat4.c mat-dvec2.c mat-dvec3.c mat-dvec4.c mat-xmat2.c mat-xmat3.c mat-xmat4.c mat-xvec2.c mat-xvec3.c mat-xvec4.c mat-similar.c $(TEST_SRC_FILE)
 libmatdir= $(includedir)/@PACKAGE_TARNAME@/mat
 libmat_HEADERS = mat.h
@@ -37,8 +37,8 @@ libexec_PROGRAMS = liquidwar6mat-test
 liquidwar6mat_test_SOURCES = mat-testmain.c
 liquidwar6mat_test_LDADD = libmat.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6mat-test
-endif
-endif
+endif # !FULLSTATIC
+endif # LW6_CUNIT
 
 clean-local:
 	rm -f *.log *.trs
