--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -42,7 +42,7 @@ LW6_MS_WINDOWS_VERSION="0, 6, 3902"
 AC_SUBST(LW6_HKEY)
 AC_SUBST(LW6_MS_WINDOWS_VERSION)
 
-LW6_CODENAME="Goliath"
+LW6_CODENAME="Arthur"
 AC_SUBST(LW6_CODENAME)
 
 LW6_VERSION_BASE="0.6"
