--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -972,7 +972,7 @@ fi
 AC_SUBST(LW6_CPU_CFLAGS)
 AC_SUBST(LW6_CPU_LDFLAGS)
 
-LW6_CFLAGS="-Wall ${LW6_X86_CFLAGS} ${LW6_AMD64_CFLAGS} ${ALLINONE_CFLAGS} ${FULLSTATIC_CFLAGS} ${OPENMP_CFLAGS} ${OPTIMIZE_CFLAGS} ${PARANOID_CFLAGS} ${GPROF_CFLAGS} ${INSTRUMENT_CFLAGS} ${PROFILER_CFLAGS} ${GCOV_CFLAGS} ${VALGRIND_CFLAGS} ${LW6_GNU_CFLAGS} ${LW6_UNIX_CFLAGS} ${LW6_MS_WINDOWS_CFLAGS} ${LW6_MAC_OS_X_CFLAGS} ${LW6_GP2X_CFLAGS} ${LW6_CPU_CFLAGS} ${LW6_CUNIT_CFLAGS}"
+LW6_CFLAGS="-Wall -std=c99 ${LW6_X86_CFLAGS} ${LW6_AMD64_CFLAGS} ${ALLINONE_CFLAGS} ${FULLSTATIC_CFLAGS} ${OPENMP_CFLAGS} ${OPTIMIZE_CFLAGS} ${PARANOID_CFLAGS} ${GPROF_CFLAGS} ${INSTRUMENT_CFLAGS} ${PROFILER_CFLAGS} ${GCOV_CFLAGS} ${VALGRIND_CFLAGS} ${LW6_GNU_CFLAGS} ${LW6_UNIX_CFLAGS} ${LW6_MS_WINDOWS_CFLAGS} ${LW6_MAC_OS_X_CFLAGS} ${LW6_GP2X_CFLAGS} ${LW6_CPU_CFLAGS} ${LW6_CUNIT_CFLAGS}"
 LW6_LDFLAGS="${ALLINONE_LDFLAGS} ${FULLSTATIC_LDFLAGS} ${OPENMP_LDFLAGS} ${GPROF_LDFLAGS} ${INSTRUMENT_LDFLAGS} ${PROFILER_LDFLAGS} ${LW6_LIBINTL_LDFLAGS} ${LW6_OS_LDFLAGS} ${LW6_CPU_LDFLAGS} ${LW6_CUNIT_LDFLAGS}"
 AC_SUBST(LW6_CFLAGS)
 AC_SUBST(LW6_LDFLAGS)
