Minor configure fix

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -27,6 +27,7 @@ AC_CANONICAL_TARGET
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER([config.h]) 
+AC_LANG_C
 AC_PROG_CC
 AC_PROG_OBJC
 AM_PROG_AS
